app/assets/stylesheets/api/confs.scss
// Place all the styles related to the api/confs controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
.study-show-page {
  width: 100%;
  height: 100vh;
  background-color: #eee;
  color: #272829;
  display: flex;
}

.study-card {
  width: 100%;
  perspective: 1000px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}
.card-show input {
  display: none;
}

:checked + .flipper {
  transform: rotateY(-180deg);
}

.card-show {
  margin: 35px auto;
}

.card-show, .front, .back {
  width: 60vw;
	height: 70vh;
}

.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;
}

.front, .back {
	backface-visibility: hidden;
  background-color: #fff;
  box-shadow: 0 3px 5px rgba(0,0,0, 0.5);
	position: absolute;
	top: 0;
	left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  font-weight: 300;
}

.front {
	z-index: 2;
	transform: rotateY(0deg);
}

.back {
	transform: rotateY(-180deg);
}

.notransition {
  transition: none !important;
}

.study-buttons {
  width: 60vw;
  box-shadow: 0 3px 5px rgba(0,0,0, 0.5);
  display: flex;
}

.study-buttons button {
  height: 10vh;
  width: 20%;
  color: #fff;
  outline: none;
  border: none;
  font-size: 22px;
  font-weight: 300;
  cursor: pointer;
}

.study-buttons small {
  display: block;
  font-size: 12px;
}

.study-prompt {
  margin-bottom: 1px;
}

.study-prompt p {
  text-align: center;
  font-size: 14px;
  font-weight: 300;
  margin-top: 0;
}

#study-1 {
  background-color: #d2009e;
}

#study-2 {
  background-color: #ff843e;
}
#study-3 {
  background-color: #fd0;
}
#study-4 {
  background-color: #88d00b;
}
#study-5 {
  background-color: #3f8fcd;
}

#reveal {
  width: 100%;
  color: #2b9292;
  background-color: #ccc;
}

